RESOLVED FIXED171812
CoreAudioSharedUnit should own its configuration parameters
https://bugs.webkit.org/show_bug.cgi?id=171812
Summary CoreAudioSharedUnit should own its configuration parameters
youenn fablet
Reported 2017-05-08 10:32:45 PDT
Currently, it takes its parameters (sampleRate, echoCancellation...) from its first client. But it should really be the last client having either been created or been applying constraints.
Attachments
Patch (10.71 KB, patch)
2017-05-08 10:40 PDT, youenn fablet
no flags
Patch (10.71 KB, patch)
2017-05-08 10:56 PDT, youenn fablet
no flags
Patch (10.69 KB, patch)
2017-05-08 14:43 PDT, youenn fablet
no flags
youenn fablet
Comment 1 2017-05-08 10:40:09 PDT
Radar WebKit Bug Importer
Comment 2 2017-05-08 10:51:34 PDT
Build Bot
Comment 3 2017-05-08 10:53:44 PDT
Attachment 309377 [details] did not pass style-queue: ERROR: Source/WebCore/platform/mediastream/mac/CoreAudioCaptureSource.cpp:253: Missing space after , [whitespace/comma] [3] Total errors found: 1 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
youenn fablet
Comment 4 2017-05-08 10:56:00 PDT
Eric Carlson
Comment 5 2017-05-08 12:22:58 PDT
Comment on attachment 309380 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=309380&action=review > Source/WebCore/ChangeLog:11 > + Adding sampleRate, volume and echoCancellation parameters to the shared audio unit. > + Setting default values when creating the shared audio unit and using those for the creation of new sources. Nit: "Adding" => "Add", "Setting" => "Set", "using" => "use" > Source/WebCore/ChangeLog:14 > + Checking valid sample rates when trying to apply a sample rate. Nit: "Checking" => "Check"
youenn fablet
Comment 6 2017-05-08 14:43:05 PDT
WebKit Commit Bot
Comment 7 2017-05-08 15:12:42 PDT
Comment on attachment 309414 [details] Patch Clearing flags on attachment: 309414 Committed r216455: <http://trac.webkit.org/changeset/216455>
WebKit Commit Bot
Comment 8 2017-05-08 15:12:44 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.